# production-rag-system

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.eval.yml  docker-compose.yml  pytest.ini  requirements.in  requirements.txt  ruff.toml
.claude/agents/: coach.md
.github/workflows/: ci.yml  eval.yml
docs/: README.md  development.md  milestones.md  testing.md
docs/decisions/: 0001-layered-architecture.md  0002-protocol-based-abstractions.md  0003-package-naming.md  0004-unit-of-work.md  0005-langgraph-query-pipeline.md  0006-shared-telemetry.md  README.md  TEMPLATE.md
eval/: corpus.json  eval_set.json  run_eval.py
infra/: otel-collector-config.yml  prometheus.yml
infra/grafana/provisioning/datasources/: datasources.yml
services/ingestion-service/: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
services/ingestion-service/app/: bootstrap.py  main.py
services/ingestion-service/db/: schema.sql
services/ingestion-service/ingestion/: main.py
services/ingestion-service/tests/: test_chunker.py  test_ingest_pipeline.py  test_integration.py
services/query-service/: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt
services/query-service/app/: main.py
services/query-service/query/: main.py
services/query-service/tests/: test_integration.py  test_query_pipeline.py
shared/: pyproject.toml
shared/shared/: telemetry.py
shared/shared/tests/: test_telemetry.py
shared/tests/: test_telemetry.py
(+56 files in other folders)
